# C_MBF

./: .gitignore  CMakeLists.txt  PrimeTest.c  anagram.c  arrays.c  build.sh  gcd.c  heap.c  linked-list.c  string-math.c  test-arrays.c  test.c
.github/workflows/: build.yml  cmake-single-platform.yml  coverage.yml
includes/: PrimeTest.h  anagram.h  arrays.h  gcd.h  heap.h  string-math.h  test-arrays.h
